--- a/cursos.html
+++ b/cursos.html
@@ -4,14 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Curso</title>
+    <style>
+        /* Estilos para melhorar a aparência */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+        }
+        h2 {
+            color: #333;
+        }
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        label {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+            margin-bottom: 15px;
+        }
+        input[type="submit"] {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <h2>Editar Curso</h2>
     <form action="editar_curso.php" method="POST">
-        <label for="nome">Nome do Curso:</label><br>
-        <input type="text" id="nome" name="nome"><br>
-        <label for="valor">Valor:</label><br>
-        <input type="text" id="valor" name="valor"><br><br>
+        <label for="nome">Nome do Curso:</label>
+        <input type="text" id="nome" name="nome">
+        <label for="valor">Valor:</label>
+        <input type="text" id="valor" name="valor">
         <input type="submit" value="Salvar Alterações">
     </form>
 </body>
