--- a/turmas.html
+++ b/turmas.html
@@ -4,16 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Turma</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+        }
+        h2 {
+            color: #333;
+        }
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        label {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
+        input[type="submit"] {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <h2>Editar Turma</h2>
     <form action="editar_turma.php" method="POST">
-        <label for="nome_curso">Nome do Curso:</label><br>
-        <input type="text" id="nome_curso" name="nome_curso"><br>
-        <label for="data_inicio">Data de Início:</label><br>
-        <input type="text" id="data_inicio" name="data_inicio"><br>
-        <label for="data_termino">Data de Término:</label><br>
-        <input type="text" id="data_termino" name="data_termino"><br><br>
+        <label for="nome_curso">Nome do Curso:</label>
+        <input type="text" id="nome_curso" name="nome_curso">
+        <label for="data_inicio">Data de Início:</label>
+        <input type="text" id="data_inicio" name="data_inicio">
+        <label for="data_termino">Data de Término:</label>
+        <input type="text" id="data_termino" name="data_termino">
         <input type="submit" value="Salvar Alterações">
     </form>
 </body>
